--- a/02/Makefile
+++ b/02/Makefile
@@ -3,18 +3,15 @@ FLAGS =-std=c++20 -Wall -pedantic -Werror -Wextra
 TEST_LIB=-lgtest -lgtest_main -lpthread
 
 
-all: TokenParser test_bin
+all: TokenParser test_bin 
 
 test_bin: 
-	${CC} ${FLAGS} TokenParser.o tests.cpp -g -o tests 
-
-
+	${CC} ${FLAGS} TokenParser.o tests.cpp -g -o tests  ${TEST_LIB}
 
 TokenParser: TokenParser.hpp TokenParser.cpp
 	$(CC) $(FLAGS) TokenParser.cpp -c
 
 test: 
-	valgrind ./tests
-
+	 ./tests
 clean:
 	rm -rf *.o tests
