--- a/04/Makefile
+++ b/04/Makefile
@@ -2,13 +2,11 @@ CC = g++
 FLAGS =-std=c++20 
 TEST_LIB=-lgtest -lgtest_main -lpthread
 
-all: VectorBin BigintBin  MainBin
+all:  BigintBin  MainBin
 
-VectorBin:
-	${CC} ${FLAGS} vector.cpp -c
 
 MainBin: 
-	${CC} ${FLAGS} vector.o BigInt.o tests.cpp -g -o tests
+	${CC} ${FLAGS}  BigInt.o tests.cpp -g -o tests
 
 BigintBin:
 	${CC} ${FLAGS} BigInt.cpp -c
